<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:clickable="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingHorizontal="48dp">

    <TextView
        style="@style/GameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="120dp"
        android:text="@string/title_home" />

    <Button
        android:id="@+id/playButton"
        style="@style/GameButton"
        android:text="@string/action_play_korean" />

    <Button
        android:id="@+id/editButton"
        style="@style/GameButton"
        android:layout_marginTop="24dp"
        android:text="@string/action_edit_korean" />

    <Button
        android:id="@+id/settingsButton"
        style="@style/GameButton"
        android:layout_marginTop="24dp"
        android:text="@string/action_settings" />
</LinearLayout>
